--- a/src/app/error.module.css
+++ b/src/app/error.module.css
@@ -11,6 +11,7 @@
   padding: 4rem;
   line-height: 3rem;
   text-transform: lowercase;
+  z-index: -1;
 }
 
 .container img {
